Fix codemirror z-index against toolbar

--- a/os-app/sub-detail/ui-style.css
+++ b/os-app/sub-detail/ui-style.css
@@ -45,8 +45,8 @@
 
 @media screen and (max-width: 760px) {
 
-.KVCWriteDetailToolbar {
-	/* browser quirks */
+.KVCWriteDetailHeader {
+	/* browser quirks maybe #purge codemirror z-index issue */
 	z-index: 999;
 }
 
